--- a/Задание №2.html
+++ b/Задание №2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Задание №2</title>
+    <title>Эти изменения верны</title>
     <link rel="stylesheet" href="Задание №2.css">
 </head>
 <body>
